# metron_ai_deepforge

./: .env  .env.container  .env.deepforge  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.pytorch  Dockerfile.tensorflow  LICENSE_SRC  README.md  build_image.sh  build_images.sh  container_entry.sh  cspell.config.yaml  pyproject.toml  requirements.txt  requirements_docs.txt  run_container.sh
.devcontainer/: devcontainer_post_start.sh
.devcontainer/pytorch_dev_container/: devcontainer.json
.devcontainer/tensorflow_dev_container/: devcontainer.json
.github/: pull_request_template.md  pytorch_cpu_runner_requirements.txt
.github/workflows/: base_build_and_deploy_docs.yml  build_and_deploy_docs.yml  build_docs.yml  rebuild_deepforge_pt_image.yml  run_integration_tests.yml  run_unit_tests.yml  set_up_deepforge_cpu_env.yml  set_up_deepforge_cpu_env_and_run_base.yml  set_up_deepforge_cpu_env_base.yml  update_deepforge_cpu_env.yml
config/: settings.py
config/models/: DiffusionDet.yml
config_schema/vision/: encoders_lib.py  encoders_lib_schema.py  models_lib.py
data_loaders/dq_floral_dataset/: dataset_collector.py  dataset_loader.py  test_dataset_collector.py  test_dataset_loader.py
docs_src/: api_docs.rst  architecture.rst  conf.py  development_notes.md  guides.rst  index.rst  project_installation.md  project_structure.md  release_page.rst
docs_src/api/: data_loaders.dq_floral_dataset.rst  data_loaders.rst  metron_ai_deepforge.config_schema.rst  metron_ai_deepforge.config_schema.vision.encoders_lib.rst  metron_ai_deepforge.config_schema.vision.encoders_lib_schema.rst  metron_ai_deepforge.config_schema.vision.models_lib.rst  metron_ai_deepforge.config_schema.vision.rst  metron_ai_deepforge.data_loaders.dq_floral_dataset.dataset_collector.rst  metron_ai_deepforge.data_loaders.dq_floral_dataset.dataset_loader.rst  metron_ai_deepforge.data_loaders.dq_floral_dataset.rst  metron_ai_deepforge.data_loaders.dq_floral_dataset.test_dataset_collector.rst  metron_ai_deepforge.data_loaders.dq_floral_dataset.test_dataset_loader.rst  metron_ai_deepforge.data_loaders.rst  metron_ai_deepforge.forge.pytorch.rst  metron_ai_deepforge.forge.rst  metron_ai_deepforge.forge.tensorflow.rst  metron_ai_deepforge.forge.vision.encoders.resnet50.rst  metron_ai_deepforge.forge.vision.encoders.resnet_enc.rst  metron_ai_deepforge.forge.vision.encoders.rst  metron_ai_deepforge.forge.vision.models.rst  (+53 more)
tests/: conftest.py
utils/: __init__.py  runtime.py
(+59 files in other folders)
