[project]
name = "metron_ai_deepforge"
requires-python = ">=3.12,<3.13"
version = "0.1"
dependencies = [
    "metron_shared"
]

[tool.uv]
python-preference = "only-system"

[tool.ruff]
line-length = 150
include = ["*.py"]

[project.optional-dependencies]
docs = [
    "myst-parser==1.0.0",
    "sphinx~=5.2",
    "sphinx-book-theme==1.1.0",
    "sphinx-copybutton==0.5.1",
    "sphinx-design==0.3.0",
    "sphinx-subfigure==0.2.4",
    "sphinx-togglebutton==0.3.2",
    "sphinxcontrib-mermaid==0.8.1",
    "sphinxemoji==0.2.0",
]

[dependency-groups]
devtools = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
core = [
    "hydra-core==1.3.0",
    "tensorflow==2.20.0"
]

[tool.uv.sources]
metron_shared = { path = "./metron_shared", editable = false }

[tool.pytest.ini_options]
pythonpath = "."
console_output_style = "count"
empty_parameter_set_mark = "xfail"
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']